test/core/errors/literals_error/zs/unicode_string_literal_error.zs
package unicode_string_literal_error;

const string UNICODE_STRING_LITERAL = "This is wrong escaped unicode character \uBAD";
